--- a/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/linear_file_item_holder"
     android:clickable="true"
-    android:elevation="100dp"
     android:focusable="true"
     android:clipToPadding="false"
     android:orientation="horizontal"
