--- a/clients/android/app/src/main/res/layout/activity_on_boarding.xml
+++ b/clients/android/app/src/main/res/layout/activity_on_boarding.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".screen.OnBoardingActvity">
+    tools:context=".screen.OnBoardingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
