--- a/clients/android/app/src/main/res/layout/dialog_rename_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_rename_file.xml
@@ -1,52 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rename_file_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:paddingHorizontal="12dp"
+    android:paddingTop="15dp"
     android:orientation="vertical">
 
-    <com.google.android.material.textview.MaterialTextView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/rename_file_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/TextAppearance.Material3.TitleMedium"
-        android:paddingTop="8dp"
-        android:text="@string/dialog_rename_file_title"
-        android:textAlignment="center" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/rename_file"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="7dp"
+        app:startIconDrawable="@drawable/ic_outline_insert_drive_file_24"
         android:hint="@string/dialog_file_name"
-        android:imeOptions="actionDone"
-        android:importantForAutofill="no"
-        android:inputType="text" />
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/rename_file"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/rename_file_error"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/rename_file_cancel"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:text="@string/cancel" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/rename_file_rename"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:text="@string/rename_file_rename" />
-
-    </LinearLayout>
-
-
+        android:textColor="@color/md_theme_error"
+        android:layout_marginTop="5dp" />
 </LinearLayout>
