--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="app.lockbook.screen.OnBoardingActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_list_files_sort"
         android:icon="@drawable/ic_baseline_sort_24"
-        android:orderInCategory="2"
         android:title="@string/menu_sort"
         app:showAsAction="ifRoom">
         <menu>
@@ -33,48 +30,7 @@
     </item>
 
     <item
-        android:id="@+id/menu_list_files_info"
-        android:icon="@drawable/ic_baseline_info_24"
-        android:orderInCategory="1"
-        android:title="@string/menu_list_files_info"
-        android:visible="false"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/menu_list_files_delete"
-        android:icon="@drawable/ic_baseline_delete_forever_24"
-        android:orderInCategory="2"
-        android:title="@string/menu_list_files_delete"
-        android:visible="false"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/menu_list_files_rename"
-        android:icon="@drawable/ic_baseline_text_format_24"
-        android:orderInCategory="3"
-        android:title="@string/menu_list_files_rename"
-        android:visible="false"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/menu_list_files_move"
-        android:icon="@drawable/ic_baseline_content_cut_24"
-        android:orderInCategory="4"
-        android:title="@string/menu_list_files_move"
-        android:visible="false"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/menu_list_files_share"
-        android:icon="@drawable/ic_baseline_share_24"
-        android:orderInCategory="5"
-        android:title="@string/menu_list_files_move"
-        android:visible="false"
-        app:showAsAction="always" />
-
-    <item
         android:id="@+id/menu_list_files_settings"
-        android:orderInCategory="6"
         android:title="@string/settings_title"
         app:showAsAction="never" />
 
