--- a/clients/android/app/src/main/res/layout/bread_crumb_item.xml
+++ b/clients/android/app/src/main/res/layout/bread_crumb_item.xml
@@ -16,7 +16,7 @@
         tools:ignore="RtlSymmetry"
         android:contentDescription="@string/bread_crumb_folder" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/bread_crumb_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
