--- a/clients/android/app/src/main/res/layout/activity_main_screen.xml
+++ b/clients/android/app/src/main/res/layout/activity_main_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,7 +36,8 @@
         android:animateLayoutChanges="true"
         android:clickable="true"
         android:visibility="gone"
-        android:focusable="true">
+        android:background="?attr/colorSurface"
+        tools:ignore="KeyboardInaccessibleWidget">
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:layout_width="match_parent"
