--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -4,75 +4,73 @@
     android:id="@+id/create_file_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:weightSum="10"
+    android:orientation="vertical"
     android:paddingHorizontal="15dp"
     android:paddingTop="15dp"
-    android:orientation="vertical" >
+    android:weightSum="10">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/create_document_holder"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="7"
-        app:startIconDrawable="@drawable/ic_outline_insert_drive_file_24"
-        android:hint="@string/dialog_file_name"
-        android:layout_marginEnd="10dp"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox" >
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/create_document_holder"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="7"
+            android:hint="@string/dialog_file_name"
+            app:startIconDrawable="@drawable/ic_outline_insert_drive_file_24">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_document"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/create_document"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/create_document_extension_holder"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:hint="@string/dialog_file_extension">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/create_document_extension"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/create_folder_holder"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:hint="@string/dialog_file_name"
+            android:visibility="gone"
+            app:startIconDrawable="@drawable/ic_outline_folder_24">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/create_folder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/create_document_extension_holder"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:hint="@string/dialog_file_extension"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_document_extension"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/create_folder_holder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:hint="@string/dialog_file_name"
-        app:startIconDrawable="@drawable/ic_outline_folder_24"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-        android:visibility="gone">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_folder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/create_file_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/md_theme_error"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:textColor="@color/md_theme_error" />
 
 </LinearLayout>
