--- a/clients/android/app/src/main/res/layout/fragment_drawing.xml
+++ b/clients/android/app/src/main/res/layout/fragment_drawing.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawing_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <app.lockbook.ui.DrawingView
         android:id="@+id/drawing_view"
