--- a/clients/android/app/src/main/res/layout/fragment_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/fragment_text_editor.xml
@@ -5,12 +5,15 @@
     android:id="@+id/text_editor_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/text_editor_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+        app:menu="@menu/menu_text_editor"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
@@ -32,7 +35,7 @@
             android:importantForAutofill="no"
             android:inputType="textMultiLine|textCapSentences"
             android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            style="@style/Widget.Material3.TextInputEditText.FilledBox"
+            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
             android:freezesText="true" />
 
     </ScrollView>
@@ -44,7 +47,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="5dp">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/menu_markdown_title"
