--- a/clients/android/app/src/main/res/values/themes.xml
+++ b/clients/android/app/src/main/res/values/themes.xml
@@ -24,6 +24,10 @@
         <item name="materialAlertDialogTheme">@style/AppTheme.AlertDialog</item>
     </style>
 
+    <style name="AppTheme.QRCapture" parent="AppTheme">
+        <item name="android:windowTranslucentNavigation">false</item>
+    </style>
+
     <style name="AppTheme.AlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog" >
         <item name="android:windowTranslucentNavigation">false</item>
     </style>
