new sync ui and more refinements

--- a/clients/android/app/src/main/res/layout/fragment_pdf_viewer.xml
+++ b/clients/android/app/src/main/res/layout/fragment_pdf_viewer.xml
@@ -29,13 +29,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="10dp">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/pdf_page_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp" />
+            android:padding="5dp"/>
 
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
