--- a/clients/android/app/src/main/res/layout/fragment_loading_screen.xml
+++ b/clients/android/app/src/main/res/layout/fragment_loading_screen.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:paddingTop="10dp"
+        android:padding="10dp"
         android:indeterminate="true" />
 
 </LinearLayout>
