fixed numberpickerpreference dialog and made more refinements

--- a/clients/android/app/src/main/res/layout/activity_on_boarding.xml
+++ b/clients/android/app/src/main/res/layout/activity_on_boarding.xml
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toEndOf="@+id/on_boarding_lockbook_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/on_boarding_learn_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
