--- a/clients/android/app/src/main/res/layout/fragment_drawing.xml
+++ b/clients/android/app/src/main/res/layout/fragment_drawing.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawing_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <app.lockbook.ui.DrawingView
         android:id="@+id/drawing_view"
@@ -23,7 +22,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:fitsSystemWindows="true">
 
         <include
             android:id="@+id/drawing_toolbar"
