--- a/clients/android/app/src/main/res/layout/fragment_pdf_viewer.xml
+++ b/clients/android/app/src/main/res/layout/fragment_pdf_viewer.xml
@@ -10,6 +10,7 @@
         android:id="@+id/pdf_viewer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
