--- a/clients/android/app/src/main/res/layout/fragment_files_list.xml
+++ b/clients/android/app/src/main/res/layout/fragment_files_list.xml
@@ -151,17 +151,31 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/sync_text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:maxLines="1"
-                android:ellipsize="end" />
+                android:animateLayoutChanges="true" >
+
+                <ImageView
+                    android:id="@+id/sync_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_outline_check_circle_24"
+                    android:contentDescription="@string/sync_finished"
+                    android:visibility="gone"
+                    android:paddingHorizontal="15dp"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/sync_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-
 
     </com.google.android.material.card.MaterialCardView>
 
