--- a/clients/android/app/src/main/res/layout/fragment_on_boarding_create_account.xml
+++ b/clients/android/app/src/main/res/layout/fragment_on_boarding_create_account.xml
@@ -8,8 +8,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/on_boarding_create_account_input_holder"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="500dp"
         android:layout_marginVertical="20dp"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
 
