--- a/clients/android/app/src/main/res/values/reg-colors.xml
+++ b/clients/android/app/src/main/res/values/reg-colors.xml
@@ -13,22 +13,23 @@
     <color name="md_theme_light_tertiaryContainer">#FBD7FC</color>
     <color name="md_theme_light_onTertiaryContainer">#29132E</color>
     <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_errorContainer">#FFDAD6</color>
-    <color name="md_theme_light_onError">#FFFFFF</color>
-    <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FEFBFF</color>
-    <color name="md_theme_light_onBackground">#1B1B1F</color>
-    <color name="md_theme_light_surface">#FEFBFF</color>
-    <color name="md_theme_light_onSurface">#1B1B1F</color>
-    <color name="md_theme_light_surfaceVariant">#E1E2EC</color>
-    <color name="md_theme_light_onSurfaceVariant">#44474E</color>
     <color name="md_theme_light_outline">#74777F</color>
     <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
-    <color name="md_theme_light_inverseSurface">#2F3033</color>
     <color name="md_theme_light_inversePrimary">#ACC7FF</color>
-    <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#2F5DA8</color>
-    <color name="md_theme_light_surfaceTintColor">#2F5DA8</color>
+
+<!--    <color name="md_theme_light_errorContainer">#FFDAD6</color>-->
+<!--    <color name="md_theme_light_onError">#FFFFFF</color>-->
+<!--    <color name="md_theme_light_onErrorContainer">#410002</color>-->
+<!--    <color name="md_theme_light_background">#FEFBFF</color>-->
+<!--    <color name="md_theme_light_onBackground">#1B1B1F</color>-->
+<!--    <color name="md_theme_light_surface">#FEFBFF</color>-->
+<!--    <color name="md_theme_light_onSurface">#1B1B1F</color>-->
+<!--    <color name="md_theme_light_surfaceVariant">#E1E2EC</color>-->
+<!--    <color name="md_theme_light_onSurfaceVariant">#44474E</color>-->
+<!--    <color name="md_theme_light_inverseSurface">#2F3033</color>-->
+<!--    <color name="md_theme_light_shadow">#000000</color>-->
+<!--    <color name="md_theme_light_surfaceTint">#2F5DA8</color>-->
+<!--    <color name="md_theme_light_surfaceTintColor">#2F5DA8</color>-->
 
     <color name="md_theme_dark_primary">#ACC7FF</color>
     <color name="md_theme_dark_onPrimary">#002F67</color>
@@ -43,24 +44,21 @@
     <color name="md_theme_dark_tertiaryContainer">#573E5B</color>
     <color name="md_theme_dark_onTertiaryContainer">#FBD7FC</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
-    <color name="md_theme_dark_errorContainer">#93000A</color>
-    <color name="md_theme_dark_onError">#690005</color>
-    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1B1B1F</color>
-    <color name="md_theme_dark_onBackground">#E3E2E6</color>
-    <color name="md_theme_dark_surface">#1B1B1F</color>
-    <color name="md_theme_dark_onSurface">#E3E2E6</color>
-    <color name="md_theme_dark_surfaceVariant">#44474E</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>
     <color name="md_theme_dark_outline">#8E9099</color>
     <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
-    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>
     <color name="md_theme_dark_inversePrimary">#2F5DA8</color>
-    <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#ACC7FF</color>
-    <color name="md_theme_dark_surfaceTintColor">#ACC7FF</color>
-    <!--        ////////////////////////////////////////////////////////////////        -->
 
-    <color name="drawingUntouchableBackground">#787878</color>
-    <color name="drawingTouchableBackground">#FFFFFF</color>
+<!--    <color name="md_theme_dark_errorContainer">#93000A</color>-->
+<!--    <color name="md_theme_dark_onError">#690005</color>-->
+<!--    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>-->
+<!--    <color name="md_theme_dark_background">#1B1B1F</color>-->
+<!--    <color name="md_theme_dark_onBackground">#E3E2E6</color>-->
+<!--    <color name="md_theme_dark_surface">#1B1B1F</color>-->
+<!--    <color name="md_theme_dark_onSurface">#E3E2E6</color>-->
+<!--    <color name="md_theme_dark_surfaceVariant">#44474E</color>-->
+<!--    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>-->
+<!--    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>-->
+<!--    <color name="md_theme_dark_shadow">#000000</color>-->
+<!--    <color name="md_theme_dark_surfaceTint">#ACC7FF</color>-->
+<!--    <color name="md_theme_dark_surfaceTintColor">#ACC7FF</color>-->
 </resources>
